<resources>
    <string name="app_name">SUNTECH Cutting M/C</string>

    <!-- 공통 메시지 -->
    <string name="save">Save</string>
    <string name="confirm">Confirm</string>
    <string name="notice">Notice</string>
    <string name="complete">Completed</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="search">Search</string>
    <string name="check">Check</string>
    <string name="loading">Loading..</string>
    <string name="msg_connection_fail">The connection to the server failed.</string>
    <string name="msg_request_permission">Permissions are required to run apps on MARSHMALLOW (6.0) or higher devices</string>
    <string name="msg_no_device_token">Device token not found. You can not receive push messages while running</string>
    <string name="msg_fail_request_permission">No permission. Quit app.</string>
    <string name="msg_failed">Failed</string>
    <string name="msg_wrong_path">Wrong Path</string>
    <!-- 공통 메시지 -->

    <!-- 공통화면 -->
    <string name="msg_has_notselected">Nothing Selected</string>
    <string name="msg_has_not_server_info">Cannot find server</string>
    <string name="msg_require_info">Info not complete</string>
    <string name="list_item_shift">Shift</string>
    <string name="list_item_work_time">Work Time</string>
    <string name="list_item_design_idx">Design IDX</string>
    <string name="list_item_target">Target</string>
    <string name="list_item_actual">Actual</string>
    <string name="list_item_product_rate">Product Rate</string>
    <string name="list_item_defective">Defective</string>
    <string name="list_item_qualti_rate">Quality Rate</string>
    <string name="list_item_start_time">Start Time</string>
    <string name="list_item_end_time">End Time</string>
    <string name="list_item_down_time">DownTime</string>
    <string name="list_item_completed">Completed</string>
    <string name="list_item_list">List</string>
    <string name="list_item_toteal">TOTAL</string>
    <string name="list_item_wos">WOS</string>
    <string name="list_item_model">Model</string>
    <string name="list_item_size">Size</string>
    <string name="list_item_balance">Balance</string>

    <!-- 메인화면 -->
    <string name="msg_no_operator">Operator not found</string>
    <string name="msg_no_design">Design file not found</string>
    <string name="msg_no_setting">Setting not found</string>
    <string name="msg_no_downtime">Downtime message not found</string>
    <string name="label_shift">TARGET</string>
    <string name="label_actual">ACTUAL</string>
    <string name="label_c_shift">C.TARGET</string>
    <string name="label_c_actual">C.ACTUAL</string>
    <string name="button_start">START</string>
    <string name="button_end_work">END WORK</string>
    <string name="button_total_count_view">Total Count View</string>
    <string name="button_select_component">Select Component</string>
    <string name="label_chart_availability">Availability</string>
    <string name="label_chart_performance">Performance</string>
    <string name="label_chart_quality">Quality</string>

    <!-- 홈화면 -->
    <string name="label_count_view">COUNT VIEW</string>
    <string name="label_setting">SETTING</string>
    <string name="label_work_info">WORK INFO</string>
    <string name="label_design_info">DESIGN INFO</string>
    <string name="label_component_info">COMPONENT INFO</string>
    <string name="bottom_label_machine_info">MACHINE INFO</string>
    <string name="bottom_label_operator_info">OPERATOR INFO</string>
    <string name="bottom_label_employee_number">Employee Number : \u0020</string>
    <string name="bottom_label_employee_name">Name : \u0020</string>
    <string name="bottom_label_factory">Factory : \u0020</string>
    <string name="bottom_label_room">Room : \u0020</string>
    <string name="bottom_label_line">Line : \u0020</string>
    <string name="bottom_label_number">Number : \u0020</string>
    <string name="bottom_label_mc_model">Model : \u0020</string>

    <!-- 카운트화면 -->
    <string name="msg_exit_shift">Do you want to exit?</string>
    <string name="msg_not_start_work">Checking Working Time</string>
    <string name="msg_no_selected_shift">No shift selected</string>
    <string name="bottom_label_pieces">Pieces : \u0020</string>
    <string name="bottom_label_cycle_time">Cycle Time : \u0020</string>
    <string name="bottom_label_article">Article : \u0020</string>
    <string name="bottom_label_model">Model : \u0020</string>
    <string name="bottom_label_material">Material : \u0020</string>
    <string name="bottom_label_component">Component : \u0020</string>

    <!-- 설정화면 -->
    <string name="msg_already_registered_mc_no">Cannot input registered machine number</string>
    <string name="title_counter_device_info">COUNTER DEVICE INFO</string>
    <string name="title_count_info">COUNT INFO</string>
    <string name="title_etc">ETC</string>
    <string name="title_count_target_type">TARGET TYPE</string>

    <string name="label_wifi">WiFi</string>
    <string name="label_ip">IP</string>
    <string name="label_mac">MAC</string>
    <string name="label_factory">Factory</string>
    <string name="label_room">Room</string>
    <string name="label_line">Line</string>
    <string name="label_mc_no">MC No</string>
    <string name="label_mc_model">MC Model</string>
    <string name="label_mc_serial">MC Serial</string>
    <string name="title_server_info">OEE SERVER INFO</string>
    <string name="label_server_ip">Server IP</string>
    <string name="label_server_port">Port</string>

    <!-- COMPONENT 화면  -->
    <string name="msg_cannot_input_wos">Cannot input wos</string>
    <string name="label_wos">WOS</string>
    <string name="label_component">COMPONENT</string>
    <string name="label_size">SIZE</string>
    <string name="label_layer">Layer</string>
    <string name="label_model2">MODEL</string>
    <string name="label_style">STYLE</string>
    <string name="label_target">TARGET</string>

    <!-- 작업인포화면  -->
    <string name="title_select_component">SELECT COMPONENT</string>
    <string name="title_available_info">AVAILABLE INFO</string>
    <string name="title_operator_info">OPERATOR INFO</string>
    <string name="list_header_planned_time1">Planned Time1</string>
    <string name="list_header_planned_time2">Planned Time2</string>
    <string name="list_header_employee_number">Employee Number</string>
    <string name="list_header_name">Name</string>


    <!-- 디자인인포화면  -->
    <string name="title_design_info">DESIGN INFO</string>
    <string name="title_pieces_info">PIECES INFO</string>
    <string name="list_header_idx">IDX</string>
    <string name="list_header_model">Model</string>
    <string name="list_header_article">Article</string>
    <string name="list_header_material">Material</string>
    <string name="list_header_component">Component</string>
    <string name="list_header_cycle_time">Cycle Time</string>
    <string name="label_pieces">Pieces</string>
    <string name="guide_pieces">= 1 Count</string>

    <!-- 제품목록화면 -->
    <string name="title_product_list">Product List</string>

    <!-- 다운타임화면 -->
    <string name="title_down_time_info">Down Time Info</string>
    <string name="title_down_time_input">Down Time Input</string>
    <string name="title_down_time_list">Down Time Input</string>
    <string name="msg_has_notcompleted">Info not complete</string>

    <!-- 액츄얼카운트화면 -->
    <string name="title_actual_count_edit">Actual Count Edit</string>
    <string name="title_actual_count_edit_input">Actual Edit Count Input</string>
    <string name="label_actual_count_edit_input">Actual Count Edit</string>
    <string name="guide_actual_count_edit_input">Administrator Approval Required</string>
    <string name="label_actual_count_edit_input_list">Actual Count Edit List</string>

    <!-- 디펙티브 화면-->
    <string name="title_defective_input">Defective input</string>
    <string name="label_defective_input_qty">Defective Q\'ty</string>
    <string name="label_defective_input_list">Defective List</string>

    <!-- 작업지시화면 -->
    <string name="title_work_sheet">Work Sheet</string>

    <!-- 푸쉬화면 -->
    <string name="title_push_info">Push Info</string>

    <!-- 추가 -->

    <string name="title_last_worker">LAST_WORKER</string>
    <string name="msg_exit_automatically">작업일이 지나서 자동으로 종료합니다</string>
    <string name="msg_require_end_work">Please, End Work first</string>
    <string name="setting_long_touch">Long Touch Enable</string>
    <string name="setting_etc">ETC</string>
    <string name="setting_target_type">TARGET TYPE</string>
    <string name="setting_target_type_current">Current</string>
    <string name="target_type_server_per_hourly">SERVER - per hourly</string>
    <string name="target_type_server_per_accumulate">SERVER - per accumulate</string>
    <string name="target_type_server_per_day_total">SERVER - per day total</string>
    <string name="target_type_device_per_hourly">DEVICE - per hourly</string>
    <string name="target_type_device_per_accumulate">DEVICE - per accumulate</string>
    <string name="target_type_device_per_day_total">DEVICE - per day total</string>
    <string name="list_item_no">NO</string>
    <string name="list_item_name">Name</string>
    <string name="list_item_usage_time">Usage Time</string>
    <string name="list_item_remain_time">Remain Time</string>
    <string name="list_item_remain_rate">Remain Rate</string>
</resources>
