<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:background="#1c2c39">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/bottom_label_machine_info"
                android:textSize="26sp"
                android:textColor="#fff"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/bottom_label_factory"
                android:textSize="20sp"
                android:textColor="#fff"/>
            <TextView
                android:id="@+id/tv_factory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:textSize="20sp"
                android:textColor="@color/bottom_text_color"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/bottom_label_room"
                android:textSize="20sp"
                android:textColor="#fff"/>
            <TextView
                android:id="@+id/tv_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:textSize="20sp"
                android:textColor="@color/bottom_text_color"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/bottom_label_line"
                android:textSize="20sp"
                android:textColor="#fff"/>
            <TextView
                android:id="@+id/tv_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:textSize="20sp"
                android:textColor="@color/bottom_text_color"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/bottom_label_number"
                android:textSize="20sp"
                android:textColor="#fff"/>
            <TextView
                android:id="@+id/tv_mc_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:textSize="20sp"
                android:textColor="@color/bottom_text_color"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/bottom_label_mc_model"
                android:textSize="20sp"
                android:textColor="#fff"/>
            <TextView
                android:id="@+id/tv_mc_model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:textSize="20sp"
                android:textColor="@color/bottom_text_color"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/bottom_label_operator_info"
                android:textSize="26sp"
                android:textColor="#fff"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/bottom_label_employee_number"
                android:textSize="20sp"
                android:textColor="#fff"/>
            <TextView
                android:id="@+id/tv_employee_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:textSize="20sp"
                android:textColor="@color/bottom_text_color"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/bottom_label_employee_name"
                android:textSize="20sp"
                android:textColor="#fff"/>
            <TextView
                android:id="@+id/tv_employee_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:textSize="20sp"
                android:textColor="@color/bottom_text_color"/>

            <TextView
                android:id="@+id/tv_shift"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="-"
                android:textSize="20sp"
                android:textColor="@color/bottom_text_color"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
